# XSerialOne

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test-requirements.txt
.github/workflows/: ci.yml
XSerialOne/: __init__.py  base.py  debug_viewer.py  frame_constants.py  input_detection.py  macro_builder.py  macro_system.py  pipeline.py  sequence.py  sequence_builder.py  serial_interface.py
XSerialOne/extras/: __init__.py  debug_twitch_viewer.py  flashbang.py  launch_macro_editor.py  macro_editor_gui.py  twitch_events.py  two_player.py
XSerialOne/extras/modules/: __init__.py  constrained_frame_randomizer.py  frame_randomizer.py  twitch_chat.py  twoplayer.py
XSerialOne/modules/: __init__.py  anti_afk.py  antirecoil.py  deadzones.py  sequence_playback.py  twitchchat.py  xinput.py
docs/: README.md  custom_modules.md  macros.md  sequences.md
examples/: example.py  example_constrained_randomizer.py  example_frame_randomizer.py  example_input_detection.py  example_sequence_builder.py  example_sequence_recording.py
tests/: conftest.py  test_antirecoil.py  test_base.py  test_deadzones.py  test_pipeline.py  test_serial.py  test_xinput.py
